# Cheaters-Dilemma

./: .gitignore  BACKEND_CHANGES_DOCUMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.txt  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES_INTEGRATION.md  NEW_FEATURES_SUMMARY.txt  QUICK_START.md  README.md  READY_FOR_DEPLOYMENT.md  pyproject.toml  replay.py  run.py
agents/: cheater.py  greedy.py  politician.py  warlord.py
analysis/: metrics.py  summarize.py
backend/: agent_wallets_seed42.json  demo_flow.py  demo_with_new_features.py  dilemma_token_metadata_seed42.json  pyproject.toml  requirements.txt  run.py  simulation_results_demo_seed42.json  simulation_with_new_features_seed42.json  start.py  verify_determinism.py
backend/app/: __init__.py  main.py
cheater-s-dilema-refrence/: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts
cheaters_dilemma/: pyproject.toml  replay.py  run.py
cheaters_dilemma/agents/: cheater.py  greedy.py  politician.py  warlord.py
cheaters_dilemma/analysis/: summarize.py
cheaters_dilemma/config/: rules.yaml
cheaters_dilemma/engine/: actions.py  agent.py  governance.py  reputation.py  resolver.py  rules.py  world.py
config/: world.yaml
contracts/: .gitignore  DilemmaToken.sol  README.md  foundry.toml
docs/: Phase 2 Implementation Plan.md  The Cheater's Dilemma_ PRD.md  The Cheater’s Dilemma – Idea Doc.md
engine/: agent.py  governance.py  resolver.py  rules.py  world.py
frontend/: README.md  package-lock.json  package.json
(+107 files in other folders)
