[project]
name = "cheaters-dilemma"
version = "0.1.0"
description = "Deterministic multi-agent game-theoretic simulation"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cheaters_dilemma"]
